Fixes font size on collapse button

--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -667,7 +667,7 @@ nav#layout-mainmenu a{text-decoration:none}
 nav#layout-mainmenu a:focus{background:transparent}
 nav#layout-mainmenu ul{margin:0;padding:0;list-style:none;float:left;white-space:nowrap;overflow:hidden}
 nav#layout-mainmenu ul li{color:#555555;display:inline-block;vertical-align:top;position:relative}
-nav#layout-mainmenu ul li a{display:inline-block;font-size:14px;color:inherit;outline:none;padding:14px 0 10px}
+nav#layout-mainmenu ul li a{display:inline-block;font-size:15px;color:inherit;outline:none;padding:14px 0 10px}
 nav#layout-mainmenu ul li a:hover{background-color:transparent !important}
 nav#layout-mainmenu ul li a:active,nav#layout-mainmenu ul li a:focus{text-decoration:none;color:#555555}
 nav#layout-mainmenu ul li a i{line-height:1;font-size:30px;vertical-align:middle}
@@ -692,14 +692,14 @@ nav#layout-mainmenu:hover ul.mainmenu-nav li{-webkit-transition:opacity 0.15s ea
 nav#layout-mainmenu ul.mainmenu-nav li a{position:relative;width:65px;height:65px}
 nav#layout-mainmenu ul.mainmenu-nav li a .nav-icon{text-align:center;display:block;position:absolute;top:50%;left:50%;margin-left:-15px;margin-top:-22.5px;width:30px;height:30px}
 nav#layout-mainmenu ul.mainmenu-nav li a .nav-icon i,nav#layout-mainmenu ul.mainmenu-nav li a .nav-icon img{margin:0}
-nav#layout-mainmenu ul.mainmenu-nav li a .nav-label{display:block;width:100px;height:20px;line-height:20px;position:absolute;bottom:0;left:50%;padding:0 5px;margin-left:-50px;font-size:15px;overflow:hidden;text-overflow:ellipsis;text-align:center}
+nav#layout-mainmenu ul.mainmenu-nav li a .nav-label{display:block;width:100px;height:20px;line-height:20px;position:absolute;bottom:0;left:50%;padding:0 5px;margin-left:-50px;overflow:hidden;text-overflow:ellipsis;text-align:center}
 nav#layout-mainmenu ul.mainmenu-nav li{opacity:.65;-webkit-transition:opacity 5s ease;transition:opacity 5s ease;-webkit-transition-delay:5s;transition-delay:5s;margin-right:30px;padding:3px 0}
 nav#layout-mainmenu ul.mainmenu-nav li:first-child{margin-left:8px}
 nav#layout-mainmenu ul.mainmenu-nav li:last-child{margin-right:0}
 nav#layout-mainmenu ul.mainmenu-nav li.active{opacity:1}
 nav#layout-mainmenu ul.mainmenu-nav li.active a .nav-label{text-shadow:1px 1px 0 rgba(255,255,255,0.3)}
 nav#layout-mainmenu ul.mainmenu-nav li:hover .nav-label{width:auto;min-width:100px;text-overflow:all;overflow:visible;background-color:#111111;z-index:2}
-nav#layout-mainmenu .menu-toggle{display:inline-block;font-size:14px;color:inherit;outline:none;height:78px;line-height:78px;display:none}
+nav#layout-mainmenu .menu-toggle{display:inline-block;font-size:15px;color:inherit;outline:none;height:78px;line-height:78px;display:none}
 nav#layout-mainmenu .menu-toggle:hover{background-color:transparent !important}
 nav#layout-mainmenu .menu-toggle:active,nav#layout-mainmenu .menu-toggle:focus{text-decoration:none;color:#555555}
 nav#layout-mainmenu .menu-toggle i{line-height:1;font-size:30px;vertical-align:middle}
@@ -727,7 +727,7 @@ nav#layout-mainmenu.navbar .menu-toggle{display:inline-block;color:#ffffff !impo
 .mainmenu-collapsed > div{display:relative;height:100%}
 .mainmenu-collapsed > div ul{overflow:hidden;padding:0;margin:0}
 .mainmenu-collapsed > div ul li{text-transform:uppercase;list-style:none;color:#555555}
-.mainmenu-collapsed > div ul li a{display:inline-block;font-size:14px;color:inherit;outline:none;white-space:nowrap;display:block;padding:15px 20px}
+.mainmenu-collapsed > div ul li a{display:inline-block;font-size:15px;color:inherit;outline:none;white-space:nowrap;display:block;padding:15px 20px}
 .mainmenu-collapsed > div ul li a:hover{background-color:transparent !important}
 .mainmenu-collapsed > div ul li a:active,.mainmenu-collapsed > div ul li a:focus{text-decoration:none;color:#555555}
 .mainmenu-collapsed > div ul li a i{line-height:1;font-size:30px;vertical-align:middle}
