--- a/modules/backend/assets/less/layout/mainmenu.less
+++ b/modules/backend/assets/less/layout/mainmenu.less
@@ -14,7 +14,7 @@ body.mainmenu-open {
 
 .mainmenu-item-link() {
     display: inline-block;
-    font-size: 14px;
+    font-size: 15px;
     color: inherit;
     outline: none;
 
@@ -205,7 +205,6 @@ nav#layout-mainmenu {
                 left: 50%;
                 padding: 0 5px;
                 margin-left: -(@mainmenu-tile-label-width / 2);
-                font-size: 15px;
                 overflow: hidden;
                 text-overflow: ellipsis;
                 text-align: center;
